update 1st comitt

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
             <img src="images/TnD.jpg" alt="Profile Picture" width="135" height="240">
             <h1>Tracy G. Quispe</h1>
         </header>
-        <nav>Main Menu
+        <nav>
         </nav>
         <main>
             <h2>"CIT 230 - Assignment Portal."</h2>
-            <li>Lesson 3: <a href="3">Assignment Label</a></li>
+            <li>Lesson 3: <a href="https://visual.ly/community/infographic/computers/26-things-note-you-develop-website">26 things to note BEFORE you develop a website</a></li>
         </main>
-        <footer>&copy; 2018 - Tracy Quispe - Provo, UT <a href="http://www.byui.edu/online">http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+        <footer>&copy; 2018 - Tracy Quispe - Provo, UT 
+            
         </footer>
+        <footer>
+        <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></footer>
     </body>
     
 </html>
