--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <h2>"CIT 230 - Assignment Portal."</h2>
-            <li>Lesson 3: <a href="https://visual.ly/community/infographic/computers/26-things-note-you-develop-website">26 things to note BEFORE you develop a website</a></li>
+            <li>Lesson 3: <a href="https://tracycit.github.io/tracy.github.io/Assignments/lesson-3/fixedhtml.html">HTML Markup Validator</a></li>
         </main>
         <footer>&copy; 2018 - Tracy Quispe - Provo, UT 
             
