--- a/Assignments/lesson-4/franklin.html
+++ b/Assignments/lesson-4/franklin.html
@@ -31,7 +31,8 @@
 <h3>Weather Data</h3>
 <h3>10-day forecast</h3>
 <img src="images/rainy-1.jpg" alt="Rainy" width="300" height="250">
-<h3>city article</h3>
+<h3>City Article</h3>
+    <p>For the next 10 days we see clouds moving in from the west, it will be ready for the next 7 days and clear skies afterwards</p>
 <img src="images/rainy.jpg" alt="Franklin Rainy" width="200" height="160">
 </main>
 
