--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <main>
             <h2>"CIT 230 - Assignment Portal."</h2>
             <li>Lesson 3: <a href="https://tracycit.github.io/tracy.github.io/Assignments/lesson-3/fixedhtml.html">HTML Markup Validator</a></li>
-            <li>Lesson 4: <a href="franklin.html"  target="_blank">Weather Site</a></li>
-            <li>Lesson 4: <a href="Website Planning.pdf"  target="_blank"> Planning Document</a></li>
+            <li>Lesson 4: <a href="https://tracycit.github.io/tracy.github.io/Assignments/lesson-4/franklin.html"  target="_blank">Weather Site</a></li>
+            <li>Lesson 4: <a href="https://tracycit.github.io/tracy.github.io/Assignments/lesson-4/Website%20Planning%20Document.pdf"  target="_blank"> Website Planning Document</a></li>
 
         </main>
         <footer>&copy; 2018 - Tracy Quispe - Provo, UT 
